<resources>
    <string name="API_KEY" templateMergeStrategy="preserve" translatable="false">AIzaSyDBqpUi75ZYj9R31I7Q7P-dzznM4yJLHt4</string>


    <!-- REGISTRATION -->
    <string name="login_string">Already have an account? <b>Login here</b></string>
    <string name="login_succes">Login Succesfully</string>
    <string name="verify_email_first">Verify email first</string>
    <string name="field_required">Field Is Required</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="image_no_select">Image not selected</string>
    <string name="select_image">Please select image</string>

    <!--    NAVIGATION DRAWER -->
    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Open Drawer</string>


    <string name="app_name">my_doctor_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonTakePhoto">Take Photo</string>
    <string name="buttonSelectPhoto">Pick Photo</string>
    <string name="descriptionImage">insert image</string>
    <string name="buttonDiagnose">Get diagnostic</string>
    <string name="defaultImage">Result: </string>
    <string name="no_cancer_records">No pre-diagnostic records available</string>
    <string name="delete_cancer_record">Delete Cancer Record</string>
    <string name="button_save">Save pre-diagnostic</string>
    <string name="delete_all">Delete all records</string>
    <string name="title_advice">Advice</string>
    <string name="index_uv_title">Index Uv -</string>
    <string name="title_location">Location</string>

    <!--INDEX VALUES AND ADVICES -->
    <string name="low_risk">Low Risk</string>
    <string name="moderate_risk">Moderate Risk</string>
    <string name="high_risk">Hight Risk</string>
    <string name="veryHigh_risk">Very High Risk</string>
    <string name="extreme_risk">Extreme Risk</string>

    <string name="low_risk_body">No protection needed. You can safely stay outside using minimal
        sun protection.</string>
    <string name="moderate_risk_body">Protection needed. Seek shade during late morning through mid-afternoon.
        When outside, generously apply broad-spectrum SPF-15 or higher sunscreen on exposed skin, and
        wear protective clothing, a wide-brimmed hat, and sunglasses</string>
    <string name="high_risk_body">Hight Risk</string>
    <string name="veryHigh_risk_body">Extra protection needed. Be careful outside, especially during
        late morning through mid-afternoon. If your shadow is shorter than you, seek shade and wear
        protective clothing, a wide-brimmed hat, and sunglasses, and generously apply a minimum of
        SPF-15, broad-spectrum sunscreen on exposed skin.</string>
    <string name="extreme_risk_body">Extra protection needed. Be careful outside, especially during
        late morning through mid-afternoon. If your shadow is shorter than you, seek shade and wear
        protective clothing, a wide-brimmed hat, and sunglasses, and generously apply a minimum of
        SPF-15, broad-spectrum sunscreen on exposed skin.</string>

    <!-- MAPS FRAGMENT -->
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_message">My Doctor requires location permission
        to acces your location</string>
    <string name="location_update">Location update started</string>
    <string name="titleLogin">Klover</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="option_login">Kindly Choose One</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="send_request">Send request</string>
    <string name="cancel_appointment">Cancel</string>

    <!--    APPOINTMENT -->
    <string name="cancel_specific_appointment">Are you sure you want to cancel the appointment</string>
    <string name="acept_appointment">ACCEPT</string>
    <string name="accept_appointment_title">The appointment is accepted by </string>
    <string name="viewPager_patientDetails_title">Patient Details</string>
    <string name="viewPager_doctorNotes_title">Patient Details</string>
    <string name="instructions">Zoom In to see details</string>
    <string name="save_note">Save Notes</string>
    <string name="default_text_doctor_note">No worry about this mole</string>
    <string name="save_doctor_note_warning">Seems that you left some data without description… A default note "No worries about this mole" will be saved.</string>
    <string name="save_doctor_note">Do you want to save the current note and send it to</string>
    <string name="accept_appointment_no_valid">To accept an appointment, first give some background to your patient by saving some notes</string>
    <string name="accept_appointment">Notify your patient about the appointment status by Email</string>
    <string name="pending_appointments">Pending Appointments</string>
    <string name="available_doctors">Available Doctors</string>
    <string name="my_appointments">My Appointments</string>
    <string name="reasson_appointment_cancelation">Choose the reason of appointment cancellation and notify it by email</string>
    <string name="call">Call</string>
    <string name="delete_call">Do you really want to delete the call?</string>

    <!--    RECIPES -->

    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healty</string>
    <string name="cheap">Cheap</string>
    <string name="cuisine_type">Cusine Type</string>
    <string name="vitamin">Anticancer Vitamins</string>
    <string name="vitaminA">Vitamin A</string>
    <string name="vitaminE">Vitamin E</string>
    <string name="vitaminC">Vitamin C</string>
    <string name="vitaminD">Vitamin D</string>
    <string name="chinese">chinese</string>
    <string name="japanese">japanese</string>
    <string name="spanish">spanish</string>
    <string name="turkish">turkish</string>
    <string name="moroccan">moroccan</string>
    <string name="mexican">mexican</string>
    <string name="italian">italian</string>
    <string name="indian">indian</string>

    <string name="recipeOverViewTitle">Recipe OverView</string>
    <string name="ingredientsTitle">Ingredients</string>
    <string name="instructionsTitle">Instructions</string>
    <string name="my_fav_recipe">Fav. Recipes</string>
    <string name="save_to_favorites">Save To Favorites</string>
    <string name="recipe_saved">Recipe saved</string>
    <string name="removed_from_fav">Removed from Favorites</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="no_favorite_recipes">No favorite Recipes</string>


    <!--    SETTINGS-->

    <string name="storage_perm_denies">Storage permission denied</string>

    <!--    InternetConnection-->

    <string name="no_internet_connection">No internet connection</string>

    <!--    DETECTOR ACTIVITY-->
    <string name="invalid_img">Default picture no valid</string>
    <string name="ask_for_save_diagnostic">Are you sure to save this pre-diagnostic?</string>
    <string name="detection_needed">Before save result, get a diagnostic</string>
    <string name="no_notes_records">No doctor notes</string>
    <string name="pick_other">Pick other</string>
    <string name="take_other">Take other</string>
    <string name="records">Records</string>
    <string name="long_press">Long press to start selection</string>
    <string name="patient_registration">Patient Registratioin</string>
    <string name="save_result">Save Result</string>
    <string name="ask_for_delete_all_records">Are you sure to delete all records?</string>
    <string name="ask_for_delete_selected_records">Do you want to delete the selected records?</string>
</resources>