<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/cancerRecordsFragment"
            android:icon="@drawable/ic_records"
            android:title="Home"/>
        <item android:id="@+id/btnSavedPlaces"
            android:icon="@drawable/ic_location"
            android:title="Saved Places"/>
        <item android:id="@+id/btnSettings"
            android:icon="@drawable/ic_setting"
            android:title="Settings"/>
        <item android:id="@+id/btnFavRecipes"
            android:title="@string/my_fav_recipe"
            android:icon="@drawable/ic_recipe_fav"/>

    </group>

    <item android:title="Appointments">
        <menu>
            <item android:id="@+id/btnShowAvailableDoctors"
                android:icon="@drawable/ic_doctor"
                android:title="@string/available_doctors"/>
            <item android:id="@+id/btnShowPendingAppointments"
                android:title="@string/pending_appointments"
                android:icon="@drawable/ic_appointment"/>
            <item android:id="@+id/btnMyAppointments"
                android:title="@string/my_appointments"
                android:icon="@drawable/ic_accepted_appointment"/>

        </menu>
    </item>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/btnLogOut"
                android:title="Log Out"
                android:icon="@drawable/ic_logout_24">

            </item>
        </menu>
    </item>

<!--    <item android:title="">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/btnHelp"-->
<!--                android:icon="@drawable/ic_help"-->
<!--                android:title="Help"/>-->
<!--            <item-->
<!--                android:id="@+id/btnAbout"-->
<!--                android:icon="@drawable/ic_info"-->
<!--                android:title="About"/>-->
<!--        </menu>-->
<!--    </item>-->

</menu>