<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.patientFragments.recipes.RecipeOverViewFragment">

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/time_textView"
        app:layout_constraintEnd_toEndOf="@+id/time_textView"
        app:layout_constraintStart_toStartOf="@+id/time_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_textView"
        app:layout_constraintEnd_toStartOf="@+id/time_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/likes_textView"
        app:layout_constraintEnd_toEndOf="@+id/likes_textView"
        app:layout_constraintStart_toStartOf="@+id/likes_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

    <ImageView
        android:id="@+id/vegetarian_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/title_textView"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegetarian_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

    <ImageView
        android:id="@+id/vegan_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

    <ImageView
        android:id="@+id/gluten_free_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/gluten_free_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_imageView" />

    <ImageView
        android:id="@+id/dairy_free_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/gluten_free_imageView"
        app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/dairy_free_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_imageView" />

    <ImageView
        android:id="@+id/healthy_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/healthy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
        app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
        app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

    <ImageView
        android:id="@+id/cheap_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
        app:layout_constraintTop_toBottomOf="@+id/healthy_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/cheap_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
        app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
        app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />


    <ImageView
        android:id="@+id/vitaminA_imageView"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_a"
        app:layout_constraintStart_toStartOf="@+id/vegan_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegan_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vitaminA_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vitaminA"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminA_imageView"
        app:layout_constraintTop_toTopOf="@id/vitaminA_imageView"/>
    <TextView
        android:id="@+id/vitaminA_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="- 1.234 IU"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminA_textView"
        app:layout_constraintTop_toTopOf="@id/vitaminA_imageView"/>

    <ImageView
        android:id="@+id/vitaminE_imageView"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_e"
        app:layout_constraintStart_toEndOf="@+id/vitaminA_amount_textView"
        app:layout_constraintTop_toBottomOf="@+id/vegan_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vitaminE_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vitaminE"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminE_imageView"
        app:layout_constraintTop_toTopOf="@id/vitaminA_imageView"/>
    <TextView
        android:id="@+id/vitaminE_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="- 15mg"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminE_textView"
        app:layout_constraintTop_toTopOf="@id/vitaminA_imageView"/>

    <ImageView
        android:id="@+id/vitaminC_imageView"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_c"
        app:layout_constraintStart_toStartOf="@+id/vitaminA_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vitaminA_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vitaminC_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vitaminC"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminC_imageView"
        app:layout_constraintBottom_toBottomOf="@id/vitaminC_imageView"
        app:layout_constraintTop_toTopOf="@id/vitaminC_imageView"/>
    <TextView
        android:id="@+id/vitaminC_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="- 65mg"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminC_textView"
        app:layout_constraintTop_toTopOf="@id/vitaminC_textView"/>

    <ImageView
        android:id="@+id/vitaminD_imageView"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="27dp"
        android:src="@drawable/ic_d"
        app:layout_constraintStart_toEndOf="@+id/vitaminC_amount_textView"
        app:layout_constraintTop_toBottomOf="@+id/vitaminA_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vitaminD_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vitaminD"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminD_imageView"
        app:layout_constraintBottom_toBottomOf="@id/vitaminD_imageView"
        app:layout_constraintTop_toTopOf="@id/vitaminD_imageView"/>
    <TextView
        android:id="@+id/vitaminD_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="- 10ug"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toEndOf="@+id/vitaminD_textView"
        app:layout_constraintTop_toTopOf="@id/vitaminD_textView"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vitaminC_imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>