<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetectorActivity">



    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/map_background"
                android:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/lightGray">

            <RelativeLayout
                android:id="@+id/inner_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/mCameraButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_camera" />

                <ImageView
                    android:id="@+id/mGalleryButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_gallery" />

            </RelativeLayout>



        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/img_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/relative_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="10dp">
        <ImageView
            android:id="@+id/mPhotoImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/descriptionImage"

            app:srcCompat="@android:color/darker_gray" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mDetectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="@string/buttonDiagnose"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:elevation="10dp"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@id/img_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/mResultTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/defaultImage"
        android:textAlignment="center"
        android:maxLines="1"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/mDetectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:visibility="invisible"
        android:padding="15dp"
        android:text="@string/save_result"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:elevation="10dp"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@id/mResultTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>